--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/core": "^7.16.1",
+    "@mantine/form": "^7.16.1",
+    "@mantine/hooks": "^7.16.1",
+    "@mantine/modals": "^7.16.1",
+    "@tabler/icons-react": "^3.29.0",
+    "next": "15.1.5",
+    "postcss-preset-mantine": "^1.17.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.5"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
-    "@types/react-dom": "^19"
+    "@types/react-dom": "^19",
+    "typescript": "^5"
   }
 }
