--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "next": "15.1.5",
     "postcss-preset-mantine": "^1.17.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-countup": "^6.5.3",
+    "react-dom": "^19.0.0",
+    "react-phone-input-2": "^2.15.1"
   },
   "devDependencies": {
     "@types/node": "^20",
