--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/carousel": "^7.16.2",
     "@mantine/core": "^7.16.1",
     "@mantine/form": "^7.16.1",
     "@mantine/hooks": "^7.16.1",
     "@mantine/modals": "^7.16.1",
     "@tabler/icons-react": "^3.29.0",
+    "embla-carousel-autoplay": "^7.1.0",
+    "embla-carousel-react": "^7.1.0",
     "next": "15.1.5",
     "postcss-preset-mantine": "^1.17.0",
     "react": "^19.0.0",
