--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "npm install --legacy-peer-deps"
   },
   "dependencies": {
-    "@mantine/carousel": "^7.16.2",
-    "@mantine/core": "^7.16.2",
+    "@mantine/carousel": "^7.16.1",
+    "@mantine/core": "^7.16.1",
     "@mantine/form": "^7.16.1",
     "@mantine/hooks": "^7.16.1",
     "@mantine/modals": "^7.16.1",
