--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "npm install --legacy-peer-deps"
+    "lint": "next lint"
   },
   "dependencies": {
     "@mantine/carousel": "^7.16.1",
@@ -20,9 +19,9 @@
     "embla-carousel-react": "^7.1.0",
     "next": "15.1.5",
     "postcss-preset-mantine": "^1.17.0",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-countup": "^6.5.3",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
     "react-phone-input-2": "^2.15.1"
   },
   "devDependencies": {
