--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
-    "react-phone-input-2": "^2.15.1"
+    "react-grid-gallery": "^1.0.1",
+    "react-image-grid-gallery": "^3.0.0",
+    "react-phone-input-2": "^2.15.1",
+    "yet-another-react-lightbox": "^3.21.7"
   },
   "devDependencies": {
     "@types/node": "^20",
