--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tabler/icons-react": "^3.29.0",
     "embla-carousel-autoplay": "^7.1.0",
     "embla-carousel-react": "^7.1.0",
+    "framer-motion": "^12.0.6",
     "next": "15.1.5",
     "postcss-preset-mantine": "^1.17.0",
     "react": "^18.3.1",
