--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/hooks": "^7.16.1",
     "@mantine/modals": "^7.16.1",
     "@tabler/icons-react": "^3.29.0",
+    "axios": "^1.7.9",
     "embla-carousel-autoplay": "^7.1.0",
     "embla-carousel-react": "^7.1.0",
     "next": "15.1.5",
